feat(auth): Authentication basic added
